Revert "Fix jumpy sidebars"
This reverts commit 79eb6d39423c47c8c7809ed34cdc88effbb6e97e.

--- a/view/theme/redbasic/css/style.css
+++ b/view/theme/redbasic/css/style.css
@@ -45,9 +45,6 @@ main {
 	margin-left: auto;
 	margin-right: auto;
 	max-width: $main_widthpx;
-}
-
-main #region_2 {
         margin-bottom: $bottom_margin;
 }
 
